[tool.poetry]
name = "p_pl_dl"
version = "0.1.0"
description = ""
license = "GPL-3.0-only"
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yisuschrist/p_pl_dl"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
yt-dlp = ">=2022.10.4"
jsbeautifier = "^1.14.9"
rich = "^13.5.3"
rich-argparse-plus = "^0.3.1.4"
platformdirs = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
