[tool.poetry]
name = "p_pl_dl"
version = "0.1.0"
description = "A porn playlist downloader using yt-dlp and beautifulsoup, along with some limited support for image albums."
license = "GPL-3.0-only"
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yisuschrist/p_pl_dl"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = ">=4.12.3"
core-helpers = ">=1.3.1"
jsbeautifier = ">=1.15.1"
requests = ">=2.31.0"
rich = ">=13.7.1"
yt-dlp = ">=2022.10.4"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240311"
types-beautifulsoup4 = "^4.12.0.20240229"

[tool.poetry.scripts]
p_pl_dl = "p_pl_dl.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
